<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_server_bt_msgs</name>
  <version>0.0.1</version>
  <description>ActionServer.BT ROS message and action interfaces</description>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <author>Marq Rasmussen</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
