<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_server_bt_samples</name>
  <version>0.0.0</version>
  <description>Sample package to show how to load BehaviorTree plugins and execute them with ActionServer.BT</description>
  <maintainer email="marq.razz@gmail.com">Marq Rasmussen</maintainer>
  <author>Marq Rasmussen</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
